// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AzureApplicationInsights-Snapshot renders a AzureApplicationInsights with tags 1`] = `
"{
  "output": {
    "app_id": {
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.app_id}"
    },
    "connection_string": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.connection_string}"
    },
    "id": {
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.id}"
    },
    "instrumentation_key": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.instrumentation_key}"
    },
    "name": {
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.name}"
    }
  },
  "resource": {
    "azurerm_application_insights": {
      "testAppi_appinsights_06357BD3": {
        "application_type": "web",
        "daily_data_cap_in_gb": 10,
        "daily_data_cap_notifications_disabled": true,
        "location": "eastus",
        "name": "appi-test",
        "resource_group_name": "rg-test",
        "tags": {
          "environment": "test"
        }
      }
    }
  }
}"
`;

exports[`AzureApplicationInsights-Snapshot renders a AzureApplicationInsights without tags 1`] = `
"{
  "output": {
    "app_id": {
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.app_id}"
    },
    "connection_string": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.connection_string}"
    },
    "id": {
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.id}"
    },
    "instrumentation_key": {
      "sensitive": true,
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.instrumentation_key}"
    },
    "name": {
      "value": "\${azurerm_application_insights.testAppi_appinsights_06357BD3.name}"
    }
  },
  "resource": {
    "azurerm_application_insights": {
      "testAppi_appinsights_06357BD3": {
        "application_type": "web",
        "daily_data_cap_in_gb": 10,
        "daily_data_cap_notifications_disabled": true,
        "location": "eastus",
        "name": "appi-test",
        "resource_group_name": "rg-test"
      }
    }
  }
}"
`;
